--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.idea/workspace.xml
+*.xml
+*.xml
+*.iml
+*.pyc
+.idea/programs.iml
+.idea/misc.xml
+.idea/workspace.xml
